--- a/site/src/css/CreatingOrder.css
+++ b/site/src/css/CreatingOrder.css
@@ -24,7 +24,8 @@
     background-color: #eee;
     padding: 0.25rem 0.5rem;
     border-radius: 20px;
-    margin-right: 5px;
+    margin-right: 7px;
+    margin-bottom: 7px;
 }
 
 .my-custom-class .modal-content {
@@ -94,6 +95,23 @@
     border: solid white;
     border-width: 0 2px 2px 0;
     transform: rotate(45deg);
+}
+
+/*
+Отображение полученной цены и времени
+ */
+.label-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 500px;
+    background-color: #f0f0f0;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin: 15px auto;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 /*
