--- a/site/src/css/NewStyles.css
+++ b/site/src/css/NewStyles.css
@@ -19,3 +19,11 @@
     padding: 20px;
     text-align: center;
 }
+
+.notification-button {
+    padding: 0;
+    margin: 4px 0 0;
+    border: none;
+    background-color: transparent;
+    color: blue;
+}
