--- a/site/src/css/App.css
+++ b/site/src/css/App.css
@@ -5,3 +5,11 @@
     align-items: center;
     margin-top: 100px;  /* добавить отступ сверху для смещения кнопок вниз */
 }
+
+.resizable-image-container {
+    resize: both; /* Позволяет изменять размер как по вертикали, так и по горизонтали */
+    overflow: auto; /* Необходимо для корректной работы свойства resize */
+    width: 300px; /* Начальная ширина */
+    height: 300px; /* Начальная высота */
+    border: 10px solid #ccc; /* Граница, чтобы пользователь видел где контейнер */
+}
