--- a/site/src/css/CreatingOrder.css
+++ b/site/src/css/CreatingOrder.css
@@ -55,7 +55,11 @@
     text-align: center; /* центрируем элементы по горизонтали */
 }
 
+
+
 .item {
+    font-weight: bold; /* Делаем текст жирным */
+    border: 1px solid #000; /* Добавляем границу вокруг текста */
     display: inline-block;
     background-color: #eee;
     padding: 0.25rem 0.5rem;
@@ -68,48 +72,13 @@
     opacity: 0.5;
 }
 
-.my-custom-class .modal-content {
-    width: 600px;
-}
-
-.custom-modal {
-    width: 600px;
-}
-
 .input-container {
-    display: flex; /* задаем display: flex для flexbox layout'а */
-    justify-content: center; /* центруем блок по горизонтали */
-    align-items: center; /* центруем блок по вертикали */
-    flex-direction: column; /* изменяем направление flexbox layout'а на столбцы */
-    max-width: 500px; /* устанавливаем максимальную ширину контейнера */
-    margin: 0 auto 1rem;
-}
-
-.dropdown-menu-custom {
-    position: absolute;
-    top: 40px;
-    left: 0;
-    width: 100%;
-    max-height: 200px;
-    overflow-y: auto;
-    background-color: #fff;
-    border: 1px solid rgba(0, 0, 0, 0.15);
-    padding: 0.5rem 0;
-    z-index: 1000;
-}
-
-/*
-Текст внутри имен заказов (то есть их имена)
- */
-.checkbox-custom {
     display: flex;
+    justify-content: center;
     align-items: center;
-    margin: 0.25rem 1rem;
-    cursor: pointer;
-}
-
-.checked .checkmark {
-    background-color: #17A2B8;
+    flex-direction: column;
+    max-width: 500px;
+    margin: 0 auto 1rem;
 }
 
 /*
@@ -127,15 +96,6 @@
     border-radius: 5px;
     margin: 15px auto;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-.price-label,
-.order-time-label {
-    margin: 5px;
-    padding: 5px;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    border-radius: 5px;
 }
 
 /*
