--- a/site/src/css/CreatingOrder.css
+++ b/site/src/css/CreatingOrder.css
@@ -52,14 +52,12 @@
 }
 
 .selected-items {
-    text-align: center; /* центрируем элементы по горизонтали */
+    text-align: center;
 }
 
-
-
 .item {
-    font-weight: bold; /* Делаем текст жирным */
-    border: 1px solid #000; /* Добавляем границу вокруг текста */
+    font-weight: bold;
+    border: 1px solid #000;
     display: inline-block;
     background-color: #eee;
     padding: 0.25rem 0.5rem;
